--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "name": "your-backend",
+  "version": "1.0.0",
+  "main": "api/index.js",
+  "scripts": {
+    "start": "node api/index.js"
+  },
   "dependencies": {
+    "@vercel/node": "^5.3.6",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -7,7 +14,6 @@
     "http-proxy-middleware": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
-    "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.9"
+    "multer": "^1.4.5-lts.2"
   }
 }
