--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 MONGO_URI = mongodb+srv://khushimishra1082002:1234@cluster0.nob1pny.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 JWT_SECRET = mySecretKey
+CLOUD_NAME=dtrs9uyya
+API_KEY=981717563575633
+API_SECRET=oZkWnBhABRNsFD5pVJZb1sTWlsM
